Fix nav links wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -735,7 +735,7 @@ footer h3 {
   nav li {
     float: left;
     font-size: 0.75em;
-    margin-left: 12%;
+    margin-left: 11%;
   }
 
   nav li:first-child,
